Add lots of entries to index from Chapter 3

--- a/tex/3.tex
+++ b/tex/3.tex
@@ -48,6 +48,7 @@ freedom are given by by $\ell_i(v) = v(x^i)$.  Conditions for uniquely
 determining a polynomial based on interpolation of function values and
 derivatives at a set of points was also discussed in
 \citet{BrambleZlamal1970}, although the term unisolvence was not used.
+\index{unisolvence}
 
 For any finite element, one may define a local basis for
 $\CiarletSpace$ that is dual to the degrees of freedom. Such a basis
@@ -55,6 +56,7 @@ $\{\phi^T_1,\phi^T_2 \ldots , \phi^T_{n} \}$ satisfies $ \ell_i(
 \phi^T_j ) = \delta_{ij} $ for $1 \leqslant i,j \leqslant n $ and is called
 the \emph{nodal basis}. It is typically this basis that is used in
 finite element computations.
+\index{nodal basis}
 
 Also associated with a finite element is a \emph{local interpolation
   operator}, sometimes called a \emph{nodal interpolant}. Given some
@@ -89,6 +91,8 @@ v(F_T(\hat{x}))$ for all $\hat{x} \in \hat{T}$. Given a functional
 $\hat{\ell} \in \hat{\CiarletSpace}'$, its \emph{pushforward} acts on
 a function in $v \in \CiarletSpace$ by $\mathcal{F}_*(\hat{\ell})(v) =
 \hat{\ell}(\mathcal{F}^*(v))$.
+\index{affine equivalence}
+
 %%
 \begin{definition}[Affine equivalence]
   Let $(\hat{T}, \hat{\CiarletSpace}, \hat{\mathcal{L}})$ and
@@ -141,6 +145,7 @@ presented in Table~\ref{kirby-6:tab:overview}.
 %------------------------------------------------------------------------------
 \section{Notation}
 
+\index{degrees of freedom}
 \begin{itemize}
 \item
   The space of polynomials of degree up to and including $q$ on a
@@ -246,6 +251,7 @@ this is less common in practice.
 
 \vspace*{7pt}
 \subsection{The Lagrange element}
+\index{Finite element!Lagrange}
 
 The best-known and most widely used finite element is the $\Poly{1}$
 Lagrange element. This lowest-degree triangle is sometimes called the
@@ -335,6 +341,7 @@ Vector-valued or tensor-valued Lagrange elements are usually constructed
 by using a Lagrange element for each component.
 
 \subsection{The Crouzeix--Raviart element}
+\index{Finite element!Crouzeix--Raviart}
 
 {The Crouzeix--Raviart element was introduced in
 \citet{CrouzeixRaviart1973} as a technique for solving the stationary
@@ -442,6 +449,7 @@ element are included.
 
 \vspace*{-6pt}\subsection{The Raviart--Thomas element}
 \label{sec:raviartthomas}
+\index{Finite element!Raviart--Thomas}
 
 The Raviart--Thomas element was introduced
 by \citet{RaviartThomas1977}. It was the first element to discretize
@@ -556,6 +564,7 @@ that \citep[Chapter III.3]{BrezziFortin1991}
 
 %------------------------------------------------------------------------------
 \subsection{The Brezzi--Douglas--Marini element}
+\index{Finite element!Brezzi--Douglas--Marini}
 
 The Brezzi--Douglas--Marini element was introduced by Brezzi,
 Douglas and Marini in two dimensions (for triangles) in
@@ -622,6 +631,7 @@ the polynomial degree between triangles were derived
 in \citet{BrezziDouglasMarini1985a}.
 
 \subsection{The Mardal-Tai-Winther element}
+\index{Finite element!Mardal--Tai--Winther}
 
 The Mardal--Tai--Winther element was introduced
 in \citet{MardalTaiWinther2002} as a finite element suitable for the
@@ -678,6 +688,7 @@ degrees of freedom, we have that
 \end{equation}
 
 \subsection{The Arnold--Winther element}
+\index{Finite element!Arnold--Winther}
 
 The Arnold--Winther element was introduced
 by \citet{ArnoldWinther2002}. This paper presented the first stable
@@ -785,6 +796,7 @@ in \citet{ArnoldFalkWinther2006c}.
 
 %------------------------------------------------------------------------------
 \subsection{The \nedelec{} $\Hcurl$ element of the first kind}
+\index{Finite element!N\'ed\'elec}
 \label{sec:nedelec:first}
 
 \begin{definition}[\nedelec{} $\Hcurl$ element of the first kind]
@@ -869,6 +881,7 @@ degrees of freedom above, we have that \citep[Theorem 2]{Nedelec1980}
 
 \subsection{The $\Hcurl$ \nedelec{} element of the second kind}
 \label{sec:nedelec:second}
+\index{Finite element!N\'ed\'elec}
 
 \begin{definition}[\nedelec{} $\Hcurl$ element of the second kind]
   The \nedelec{} element of the second kind ($\mathrm{NED}^2_q$) is
@@ -963,6 +976,7 @@ problems. Moreover, the decoupling of each individual element provides
 an increased opportunity for parallelism and $hp$-adaptivity.
 
 \subsection{Discontinuous Lagrange}
+\index{Finite element!Discontinuous Lagrange}
 
 \begin{definition}[Discontinuous Lagrange element]
   The discontinuous Lagrange element ($\mathrm{DG}_q$)
@@ -1052,6 +1066,7 @@ and the nonconforming Hermite and Morley elements.
 
 
 \subsection{The Argyris element}
+\index{Finite element!Argyris}
 
 The Argyris element \citep{ArgyrisFriedScharpf1968,Ciarlet2002} is
 based on the space $\Poly{5}(T)$ of quintic polynomials over some triangle
@@ -1113,6 +1128,7 @@ higher than quintic, still giving \( C^1 \) continuity with \( C^2 \)
 continuity at the vertices \citep{SolinSegethDolevzel2004}.
 
 \subsection{The Hermite element}
+\index{Finite element!Hermite}
 
 \looseness-1{}The Hermite element generalizes the classic cubic Hermite
 interpolating polynomials on the line segment
@@ -1182,6 +1198,7 @@ degree \citep{BrennerScott2008}.
 
 
 \subsection{The Morley element}
+\index{Finite element!Morley}
 
 The Morley triangle defined in \citet{Morley1968} is a simple
 $H^2$-nonconforming quadratic element that is used in fourth-degree
@@ -1264,6 +1281,8 @@ Each row of the stress tensor is approximated by the lowest degree
 Raviart--Thomas element enriched by the curl of the cubic bubble
 element \citep{ArnoldBrezziDouglas1984}.
 
+\index{Finite element!Bubble elements}
+
 \begin{definition}[Bubble element]
   The bubble element ($B_q$) is defined for $q \geqslant (d+1)$ by
   \begin{align}
@@ -1296,6 +1315,8 @@ The dimension of the Bubble element is
 
 %------------------------------------------------------------------------------
 \section{Finite element exterior calculus}
+\index{finite element exterior calculus}
+
 It has recently been demonstrated that many of the finite elements
 that have been discovered or invented over the years can be formulated
 and analyzed in a common unifying framework as special cases of a more
