Decapitalize some index items.

--- a/tex/31.tex
+++ b/tex/31.tex
@@ -257,7 +257,7 @@ the velocity and pressure simultaneously.
 
 
 \subsection{Mixed finite element formulation of the Stokes equations}
-\index{Stokes equations!Mixed finite element discretization}
+\index{Stokes equations!mixed finite element discretization}
 
 Let $\mathcal{T}_h = \{T\}$ be a mesh\footnote{Note that $T$ is used
 to denote an element (cell) in a mesh in this section, in addition to
@@ -540,7 +540,7 @@ on this aspect. Below, we make some general observations and comments.
   with the time required for the assembly and solution of the linear
   systems.
 \item
-  \index{Stokes equations!Iterative linear solvers}
+  \index{Stokes equations!iterative linear solvers}
   The linear systems resulting from the equations for the composition
   and the temperature are positive definite but not symmetric. Hence,
   these are solved iteratively using a standard generalized minimal
