Add more index entries to Chapter 36.

--- a/tex/36.tex
+++ b/tex/36.tex
@@ -1,4 +1,4 @@
-\begingroup
+b\begingroup
 \fenicschapter{Automated testing of saddle point stability conditions}
               {Automated testing of saddle point stability \\ conditions}
               {Automated testing of saddle point stability conditions}
@@ -14,6 +14,9 @@
 \newcommand{\rognesdg}[1]{\mathrm{DG}_{#1}}
 \newcommand{\rognesascot}{ASCoT}
 \newcommand{\rognespython}{Python}
+
+\index{mixed finite element methods}
+\index{discrete stability}
 
 Over the last five decades, there has been a substantial body of
 research on the theory of mixed finite element methods.  Mixed finite
@@ -302,6 +305,8 @@ zero as $h \rightarrow 0$. This is precisely what is implied by the
 condition~\eqref{rognes:eq:infsup:discrete}.
 
 \subsection{Stability conditions for saddle point problems}
+
+\index{saddle point problems}
 
 We now turn to consider the special case of abstract saddle point
 problems. In this case, the stability
@@ -823,6 +828,8 @@ available from the demo directory of the \rognesascot{} module.
 
 \subsection{Mixed Laplacian}
 
+\index{Poisson equation!mixed finite element discretization}
+
 We can now return to the mixed Laplacian example described in
 Section~\ref{rognes:sec:motivation} and inspect the Brezzi stability
 properties of the element spaces involved, namely
@@ -966,6 +973,8 @@ appropriate or not, the discretization should be tested on more than a
 single mesh family.
 
 \subsection{Stokes}
+
+\index{Stokes equations!mixed finite element discretization}
 
 The Stokes equations is another classical and highly relevant saddle
 point problem. For simplicity, we here consider the following discrete
