Fix typo in Chapter 36 [rognes]

--- a/tex/36.tex
+++ b/tex/36.tex
@@ -1,4 +1,4 @@
-b\begingroup
+\begingroup
 \fenicschapter{Automated testing of saddle point stability conditions}
               {Automated testing of saddle point stability \\ conditions}
               {Automated testing of saddle point stability conditions}
