Fix spelling of ASCoT in preface

--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -10,7 +10,7 @@ Initially, the FEniCS Project consisted of two libraries: DOLFIN and
 FIAT. Since then, the project has grown and now consists of the core
 components DOLFIN, FFC, FIAT, Instant, UFC and UFL. Other FEniCS
 components and applications described in this book are SyFi/SFC,
-FErari, AScot, Unicorn, CBC.Block, CBC.RANS, CBC.Solve and DOLFWAVE.
+FErari, ASCoT, Unicorn, CBC.Block, CBC.RANS, CBC.Solve and DOLFWAVE.
 
 This book is written by researchers and developers behind the FEniCS
 Project. The presentation spans mathematical background, software
