--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -194,9 +194,9 @@
              {kent-and@simula.no}
              {Center for Biomedical Computing at Simula Research Laboratory, Norway \\
               Department of Informatics, University of Oslo, Norway}
-             {This work is supported by 
-              and the NFR Grant 209951 and 
-              a Center of Excellence grant 
+             {This work is supported by
+              the NFR Grant 209951 and
+              a Center of Excellence grant
               from the Research Council of Norway to the Center for
               Biomedical Computing at Simula Research Laboratory.}
              {Chapters
