Minor fixes [Hoffman-1]

--- a/tex/28.tex
+++ b/tex/28.tex
@@ -62,7 +62,7 @@ dissipation: the subgrid model and the numerical method. One class of
 methods, Implicit LES (ILES), relies completely on the numerical method
 to act as a subgrid model, without any additional explicit subgrid model
 \citep{Sagaut2005}. Turbulence simulation in Unicorn is based on ILES
-in the form a stabilized finite element method, referred to as a
+in the form of a stabilized finite element method, referred to as a
 General Galerkin (G2) simulation \citep{HoffmanJohnson2007}, where a
 least squares stabilization based on the residual of the
 Navier--Stokes equations acts as an ILES subgrid model.
@@ -393,7 +393,7 @@ less than all other participating groups in the workshop, see Table
       \bottomrule
     \end{tabular}
     \caption{Drag coefficient and number of cells for each of the
-      teams in participating in the BANC-1 workshop
+      teams participating in the BANC-1 workshop
       \citep{SpalartMejia2011}. The Unicorn results are the ones by
       the KTH team.}
   \label{hoffman-1:tab:hoffman-1-rlg}
