Fixes for quadrature points in Chapter 26 (oelgaard-1).

--- a/tex/26.tex
+++ b/tex/26.tex
@@ -761,11 +761,10 @@ element is similar to the declaration of any other element in \ufl
 and it can be used as such, with some limitations. Note, however,
 the subtle difference that the element order does not refer to the
 polynomial degree of the finite element shape functions, but instead
-relates to the quadrature scheme.  \ffc{} uses a Gauss--Legendre--Jacobi
-quadrature scheme mapped onto simplices for the numerical integration of
-variational forms.  So for `sufficient' integration of a second-order
-polynomial in three dimensions, \ffc{} will use two quadrature points
-in each spatial direction that is, $2^3 = 8$ points per cell.  \ffc{}
+relates to the quadrature scheme.
+For `sufficient' integration of a second-order
+polynomial in three dimensions, \ffc{} will use four quadrature points
+per cell.  \ffc{}
 interprets the quadrature points of the quadrature element as degrees of
 freedom where the value of a shape function for a degree of freedom is
 equal to one at the quadrature point and zero otherwise.  This has the
