Updated bibliography [Hoffman-2]

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3717,10 +3717,14 @@ year = {2002}
   author = {Johan Hoffman and Johan Jansson and Rodrigo Vilela de Abreu},
   title = {Adaptive modeling of turbulent flow with residual based turbulent
 	kinetic energy dissipation},
-  journal = {Comput. Meth. Appl. Mech. Engrg.},
-  year = {in press},
+  journal = {Comput. Meth. Appl. Mech. Eng.},
+  year = {2011},
+  volume = {200},
+  pages = {2758 - 2767},
+  number = {37-40},
+  issn = {0045-7825},
   owner = {njansson},
-  timestamp = {2011.02.09}
+  timestamp = {2011.10.18}
 }
 
 @INPROCEEDINGS{HoffmanJansson2009,
@@ -5537,12 +5541,28 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   number = {5},
 }
 
-@misc{Nazarov2009,
+@PHDTHESIS{Nazarov2009,
   title = {An adaptive finite element method for the compressible {E}uler equations},
   year = {2009},
   author = {M. Nazarov},
-  note = {Licentiate Thesis},
-  institution = {Royal Institute of Technology (KTH)}
+  type = {Licentiate Thesis},
+  institution = {Royal Institute of Technology (KTH)},
+  series = {Trita-CSC-A},
+  number = {2009:13},
+}
+
+@PHDTHESIS{Nazarov2011,
+  author = {Nazarov, Murtazo},
+  title = {Adaptive Algorithms and High Order Stabilization for Finite Element
+	Computation of Turbulent Compressible Flow},
+  school = {KTH, Numerical Analysis, NA},
+  year = {2011},
+  note = {QC 20110627},
+  institution = {KTH, Numerical Analysis, NA},
+  number = {2011:13},
+  pages = {xii, 54},
+  publisher = {KTH Royal Institute of Technology},
+  series = {Trita-CSC-A}
 }
 
 @BOOK{Nevcas1965,
