--- a/tex/18.tex
+++ b/tex/18.tex
@@ -387,7 +387,7 @@ A compressible variant of the \emp{UCSolver} exists as the
 general method and algorithm is very close to that of the
 \emp{UCSolver}, aside from the incompressibility. The long-term goal
 is a unification of the incompressible/compressible formulations as
-well. We refer to \citet{Nazarov2009} for implementation details of
+well. We refer to \citet{Nazarov2009,Nazarov2011} for implementation details of
 the compressible \emp{CNSSolver}. See Figure~\ref{fig:compr3D} for an
 example plot of compressible flow around a sphere.
 
@@ -767,7 +767,7 @@ and then the normal component of the velocity should be set to zero.
 This concept is encapsulated in the class \emp{SlipBC} which is a
 subclass of \emp{dolfin::BoundaryCondition} for representing strong
 boundary conditions. For more details about the implementation of slip
-boundary conditions,we refer to \citet{Nazarov2009}.
+boundary conditions,we refer to \citet{Nazarov2011}.
 
 \subsection{\emp{ElasticSmoother}}
 
