--- a/tex/17.tex
+++ b/tex/17.tex
@@ -2034,14 +2034,15 @@ pattern \citep{GammaHelmJohnsonEtAl1995}.  The implementation in \ufl{}
 is somewhat different from the patterns used in a statically typed
 language such as C++.
 
-One way to implement type based operation selection is to use a type
-switch, or a sequence of if-tests such as this:
+One way to implement type based operation selection is to use a
+\emph{type switch}, which is a sequence of if-tests as shown here:
 \begin{python}
-if isinstance(expression, IntValue):
-    result = int_operation(expression)
-elif isinstance(expression, Sum):
-    result = sum_operation(expression)
-# etc.
+def operation(expression):
+    if isinstance(expression, IntValue):
+        return int_operation(expression)
+    elif isinstance(expression, Sum):
+        return sum_operation(expression)
+    # etc.
 \end{python}
 There are several problems with this approach, one of which is
 efficiency when there are many types to check.  A type based function
@@ -2062,14 +2063,7 @@ for corresponding function names, such as \emp{IndexSum} and
 the closest superclass handler function is used instead.  Note that
 the \emp{MultiFunction} implementation is specialized to types in the
 \emp{Expr} class hierarchy.  The declaration and use of a multifunction
-is illustrated in Figure~\ref{ufl:fig:examplefunction}.  Note that
-\emp{argument} and \emp{sum} will handle instances of the exact types
-\emp{Argument} and \emp{Sum}, while \emp{terminal} and \emp{operator}
-will handle the types \emp{SpatialCoordinate} and \emp{Product} since
-they have no specific handlers.
-
-\begin{figure}
-\bwfig
+is illustrated in this example code:
 \begin{python}
 class ExampleFunction(MultiFunction):
     def __init__(self):
@@ -2097,9 +2091,11 @@ print m(x)
 print m(x[0] + x[1])
 print m(x[0] * x[1])
 \end{python}
-\caption{Example declaration and use of a multifunction.}
-\label{ufl:fig:examplefunction}
-\end{figure}
+Note that \emp{argument} and \emp{sum} will handle instances of the exact types
+\emp{Argument} and \emp{Sum}, while \emp{terminal} and \emp{operator}
+will handle the types \emp{SpatialCoordinate} and \emp{Product} since
+they have no specific handlers.
+
 %------------------------------------------------------------
 \subsection{Implementing expression transformations}
 \label{ufl:sec:transformer}
