Fixes in Chapter 11 reported by Marie

--- a/tex/11.tex
+++ b/tex/11.tex
@@ -105,22 +105,26 @@ forms as input along with a set of optional arguments:
 compile_form(forms,
              object_names={},
              prefix="Form",
-             parameters=default_parameters())
+             parameters=default_parameters(),
+             common_cell=None)
 \end{python}
 %
 The above call generates UFC conforming code for each of the given
 forms and each of the finite elements involved in the definition of
 the forms, as well as their corresponding degree-of-freedom
-maps. The \emp{prefix} argument can be used to control the prefix of
-the file containing the generated code; the default is ``Form''. The
-suffix ``.h'' will be added automatically. The second optional argument
-\emp{parameters} should be a Python dictionary with code
-generation parameters and is described further below.
-The \emp{object\_names} dictionary is an optional argument that
+maps. The \emp{object\_names} dictionary is an optional argument that
 specifies the names of the coefficients that were used to define the
 form. This is used by the command-line interface of FFC to allow a
 user to refer to any coefficients in a form by their names
-(\emp{f}, \emp{g}, etc.).
+(\emp{f}, \emp{g}, etc.). The \emp{prefix} argument can be used to
+control the prefix of the output file containing the generated code;
+the default is ``Form''. The suffix ``.h'' will be added
+automatically. The optional argument \emp{parameters} should be a
+Python dictionary with code generation parameters and is described
+further below.  The optional argument \emp{common\_cell} is mostly
+useful from within DOLFIN and is there used to specify the domain
+(cell) of integration for forms containing partly undefined
+expressions.
 
 \index{\emp{compile\_element}}
 Sometimes, it may be desirable to compile single elements, which means
