Fix typo in Chapter 21 (double-checked against code)

--- a/tex/21.tex
+++ b/tex/21.tex
@@ -528,7 +528,7 @@ defined by
 \begin{equation}
   \begin{split}
     \renni{v}{D_t^n u_h}
-    + \renni{v}{w \cdot \nabla u_n^n}
+    + \renni{v}{w \cdot \nabla u_n^{n-\frac{1}{2}}}
     + \renni{\epsilon(v)}{\sigma(u_h^{n-\frac{1}{2}}, p_h^n)}
     - \renni{v}{\nu n \cdot (\nabla u_h^{n-\frac{1}{2}})^{\top}}_{\partial\Omega}
     + \renni{v}{\bar{p} n}_{\partial\Omega}
