Fix more typos in Chapter 21

--- a/tex/21.tex
+++ b/tex/21.tex
@@ -528,12 +528,12 @@ defined by
 \begin{equation}
   \begin{split}
     \renni{v}{D_t^n u_h}
-    + \renni{v}{w \cdot \nabla u_n^{n-\frac{1}{2}}}
+    + \renni{v}{u_n^{n-\frac{1}{2}} \cdot \nabla u_n^{n-\frac{1}{2}}}
     + \renni{\epsilon(v)}{\sigma(u_h^{n-\frac{1}{2}}, p_h^n)}
     - \renni{v}{\nu n \cdot (\nabla u_h^{n-\frac{1}{2}})^{\top}}_{\partial\Omega}
-    + \renni{v}{\bar{p} n}_{\partial\Omega}
-    &+ SD_{\delta}
-    = \renni{v}{f^n}, \\
+    &+ \renni{v}{\bar{p} n}_{\partial\Omega} \\
+    + SD_{\delta}
+    &= \renni{v}{f^n}, \\
     \renni{\nabla q}{\nabla p_h^n} &= - \renni{q}{\nabla \cdot u_h^n/\delta_1},
   \end{split}
 \end{equation}
@@ -588,11 +588,11 @@ Figure~\ref{fig:g2_code}.
       \begin{equation}\label{eq:g2_scheme,2}
         \begin{split}
           \renni{v}{D_t^n u_h}
-          + \renni{v}{w \cdot \nabla u_n^n}
+          + \renni{v}{w \cdot \nabla u_n^{n-\frac{1}{2}}}
           + \renni{\epsilon(v)}{\sigma(u_h^{n-\frac{1}{2}}, p_h^n)}
           - \renni{v}{\nu n \cdot (\nabla u_h^{n-\frac{1}{2}})^{\top}}_{\partial\Omega}
           + \renni{v}{\bar{p} n}_{\partial\Omega} \\
-          + \renni{\nabla v \cdot w}{\delta_1 w \cdot \nabla u_h^{n-\frac{1}{2}}}
+          + \renni{w \cdot \nabla v}{\delta_1 w \cdot \nabla u_h^{n-\frac{1}{2}}}
           + \renni{\nabla \cdot v}{\delta_2 \nabla \cdot u_h^{n-\frac{1}{2}}}
           = \renni{v}{f^n}
         \end{split}
