Update text describing run-time performance for the weighted Laplace example in Chapter 7 (oelgaard-2).

--- a/tex/7.tex
+++ b/tex/7.tex
@@ -638,16 +638,18 @@ and the four g++ compiler options are shown with different colors.
           {\includegraphics[width=\mediumfullfig]{chapters/oelgaard-2/pdf/runtime_laplace.pdf}}
 \end{figure}
 
-The \ffc{} and g++ compile-times were less than one second for all
+The \ffc{} and g++ compile-times were less than two seconds for all
 optimization options.  It is clear~from
 Figure~\ref{oelgaard-2:fig:laplace_stats_2} that run-time performance
 is greatly influenced by the g++ optimizations.  \hbox{Compared} to the case
 where no g++ optimizations are used (the \emp{-O0} flag), the run-time
-for the standard quadrature code improves by a factor of 3.15 when
-using the \emp{-O2} option and 5.40 when using the \emp{-O2
--funroll-loops} option.  The \emp{-O3} option does not appear to
+for the standard quadrature code improves by a factor of 3.31 when
+using the \emp{-O2} option, 5.23 when using the \emp{-O2
+-funroll-loops} option and  7.75 when using the \emp{-O3} option.
+The \emp{-O3} option does not appear to
 improve the run-time noticeably beyond the improvement observed for the
-\emp{-O2 -funroll-loops} option.  Using the \ffc{} optimization option
+\emp{-O2 -funroll-loops} option when the \ffc{} optimization option
+\emp{-zeros} is used.  Using the \ffc{} optimization option
 \emp{-zeros} alone for this form does not improve run-time performance.
 In fact, using this option in combination with any of the other
 optimization options increases the run-time, even when combining with
@@ -663,8 +665,8 @@ operation count alone since the type of \ffc{} optimization must be
 taken into account as well as the intended use of g++ compiler
 options.  The optimal combination of optimizations for this form is
 \ffc{} option \emp{-ip} or \emp{-basis} combined with g++ option
-\emp{-O2 -funroll-loops}, in which case the run-time has improved by a
-factor of 7.23 compared to standard quadrature code with no g++
+\emp{-O3}, in which case the run-time has improved by a
+factor of 10.2 compared to standard quadrature code with no g++
 optimizations.
 
 The operation counts and \ffc{} compile-time for the bilinear form for
