--- a/tex/7.tex
+++ b/tex/7.tex
@@ -710,7 +710,7 @@ to the weighted Laplace example, it is clear that this problem is
 considerably more complex.  The \ffc{} compile-times in
 Table~\ref{oelgaard-2:tab:hyper_stats_1} show that the \emp{-simplify}
 optimization, as anticipated, is the most expensive to perform.  The
-g++ compile-times for all test cases were in the range two to six
+g++ compile-times for all test cases were in the range two to seven
 seconds for all optimization options.  A point to note is that the
 scope for reducing the flop count is considerably greater for this
 problem than for the weighted Laplace problem, with a difference in
@@ -741,7 +741,7 @@ option very efficient since many terms are common and can be
 precomputed and hoisted.  For the hyperelasticity form, the optimal
 combination of optimizations is \ffc{} option \emp{-simplify -zeros}
 and g++ option \emp{-O2 -funroll-loops} which improves the run-time
-performance of the code by a factor of 3149 when compared to the case
+performance of the code by a factor of 335 when compared to the case
 where no optimization is used by either \ffc{} or~g++.
 
 For the considered examples, it is clear that no single optimization
