Specify missing parameter values in Chapter 31.

--- a/tex/31.tex
+++ b/tex/31.tex
@@ -173,6 +173,7 @@ then described by the equations
 \\
   \dot{\varepsilon}(u) &= \frac{1}{2} \left (\Grad u + \Grad u^{\top} \right),
 \\
+\label{vynnytska:eq:viscosity}
   \eta &= \eta(T, x_2) = \eta_0 \exp \left( -b T/\Delta T + c (h - x_2)/ h \right) .
 \end{align}
 Here, $\dot {\varepsilon}$ is the strain rate tensor, $\eta_0$ is (still)
@@ -631,7 +632,8 @@ In this section we present the results of the thermochemical
 convection simulation, calculated on a mesh constructed by dividing
 the domain into $160 \times 80$ squares. Each square is split into two
 triangles by the right diagonal. The $C_{\mathrm{CFL}}$ time step
-parameter in~\eqref{vynnytska:eq:timestep} is $0.5$.
+parameter in~\eqref{vynnytska:eq:timestep} is $0.5$, while $b =
+\ln(2.5)$ and $c = \ln(2.0)$ in~\eqref{vynnytska:eq:viscosity}.
 
 The equations presented in Section~\ref{vynnytska:sec:maths} are
 dimensionalised using the physical parameters in
