Fix another ffigbox issue in Chapter 27, better fix this time

--- a/tex/27.tex
+++ b/tex/27.tex
@@ -1020,7 +1020,8 @@ respectively.
 \bwfig
   \ffigbox{\caption{Relaxation and re-twisting of a
       released cube over the first 0.5~s of the
-      calculation.\quad\quad\quad\quad}\label{fig:narayanan:releasedcube}}{}
+      calculation.\label{fig:narayanan:releasedcube}}}{}
+  \ffigbox{}
           {
             \subfloat[$t = 0.0$ s]{
               \includegraphics[width=\twofigsfull]{chapters/narayanan/images/png/release_000.png}
@@ -1161,7 +1162,8 @@ the fish deforms elastically as it tumbles toward the right.
   \ffigbox{\caption{The motion of a hyperelastic dolphin being forced to the
       right. Careful observation of the tail fin shows deformation of
       the dolphin in addition to its overall motion toward the right.}
-    \label{fig:narayanan:tumblingdolphin}}
+    \label{fig:narayanan:tumblingdolphin}}{}
+  \ffigbox{}
           {
             \subfloat[$t = 0.0$ s]{
               \includegraphics[width=\threefigsfull]{chapters/narayanan/images/png/dolphin_000.png}
