Change "piecewise constant functions" to "constant coefficients".

--- a/tex/17.tex
+++ b/tex/17.tex
@@ -557,7 +557,7 @@ instead of \emp{Argument} you can ignore their relative ordering.
 The only time \emp{Argument} is needed is for forms of arity $r > 2$.
 
 Coefficient functions are declared similarly for an arbitrary element,
-and shorthand notation exists for declaring piecewise constant functions:
+and shorthand notation exists for declaring constant coefficients:
 \begin{uflcode}
 w = Coefficient(element)
 c = Constant(cell)
