--- a/tex/34.tex
+++ b/tex/34.tex
@@ -37,8 +37,7 @@ Since waveguides are some of the most common structures in microwave
 engineering, especially in areas where high power and low loss are
 essential~\citep{Pozar2005}, their analysis is still a topic of much
 interest. This chapter considers the use of \fenics{} in the cutoff
-and dispersion analysis of these structures as well as the analysis of
-waveguide discontinuities. These types of analysis form an important part
+and dispersion analysis of these structures. These types of analysis form an important part
 of the design and optimization of waveguide structures for a particular
 purpose. In these kinds of waveguide problems, the solution of generalized
 eigensystems are required with the eigenvalues and eigenvectors of the
@@ -83,14 +82,14 @@ written as~\citep{Jin2002}
 subject to the boundary conditions
 \begin{align}
     \label{eq:lezar:electric_wall_BC}
-    \hat{n}\times\vec{E} &= 0\qquad \text{on $\Gamma_{e}$}\\
+    \hat{n}\times\vec{E} &= 0\qquad \text{on $\Gamma_{e}$},\\
     \label{eq:lezar:magnetic_wall_BC}
     \hat{n}\times\nabla\times{\vec{E}}{} &= 0\qquad \text{on $\Gamma_{m}$},
 \end{align}
 with $\Omega_v$ representing the interior of the waveguide and
-$\Gamma_{e}$ and $\Gamma_{m}$ electric and magnetic walls
-respectively. $\mu_r$ and $\epsilon_r$ are the relative permeability
-and relative permittivity respectively.  These are material parameters
+$\Gamma_{e}$ and $\Gamma_{m}$ electric and magnetic walls,
+respectively. Here, $\mu_r$ and $\epsilon_r$ are the relative permeability
+and relative permittivity, respectively.  These are material parameters
 that may be inhomogeneous (varying in space) but only the isotropic
 case is considered here. In this case, isotropic means that the
 medium's response is the same for all directions of the electric field
@@ -107,8 +106,8 @@ operating frequency ($f_o$) by the expression
 \end{equation}
 with $c_0$ the speed of light in free space.  This boundary value
 problem can also be written in terms of the magnetic field as
-in~\citet{Jin2002}, but as the discussions that follow are applicable
-to both formulations this will not be considered here.
+in~\citet{Jin2002}, but since the discussions that follow are applicable
+to both formulations, this will not be considered here.
 
 One way to solve the boundary value problem is to find the stationary
 point of the following variational functional
@@ -145,7 +144,7 @@ field
 with $x$ and $y$ the Cartesian coordinates in the cross sectional
 plane of the waveguide and $z$ the coordinate along the length of the
 waveguide. Here $\hat{x}$, $\hat{y}$, and $\hat{z}$, represent unit
-vectors in the $x$, $y$, and $z$-direction respectively. For the
+vectors in the $x$, $y$, and $z$-direction, respectively. For the
 purpose of this discussion, also consider the following representation
 of $\nabla$ in Cartesian coordinates
 \begin{equation}
@@ -212,7 +211,7 @@ are given by~\citep{Jin2002, PelosiCoccioliSelleri1998}
   E_{z,h} &= \sum_{i=1}^{N_L} (e_z)_i L_i.
 \end{align}
 Here $(e_t)_i$ and $(e_z)_i$ are the coefficient of the $i^\text{th}$
-vector and scalar basis functions respectively, while $N_N$ and $N_L$
+vector and scalar basis functions, respectively, while $N_N$ and $N_L$
 are the total number of each type of basis function used in the
 discretization. The letters $N$ and $L$ are chosen for the basis
 function names as a reminder that the basis functions come from
@@ -301,7 +300,7 @@ square of the cutoff wavenumber the (unknown) eigenvalue. The
 submatrices $S_{oo}$ and $T_{oo}$ (with $oo = tt, zz$)
 represent the stiffness and mass matrices common in the finite element
 literature~\citep{Davidson2011, Jin2002}. The subscripts $tt$ and $zz$
-indicate transverse and axial components respectively. The entries of
+indicate transverse and axial components, respectively. The entries of
 the matrices of \eqref{eq:lezar:matrix_equation_cutoff} are defined
 as \citep{PelosiCoccioliSelleri1998, Jin2002}
 \begin{align}
@@ -328,7 +327,7 @@ the modes by substituting the elements of the computed eigenvector into
 \eqref{eq:lezar:E_t_discretized} and \eqref{eq:lezar:E_z_discretized}. It
 should also be noted that transverse electric ($TE$) modes
 will have zeros as coefficients for the scalar basis functions
-($\begin{Bmatrix}e_z\end{Bmatrix} = 0$) whereas transverse magnetic
+($\begin{Bmatrix}e_z\end{Bmatrix} = 0$) whereas transverse magnetic ($TM$)
 modes will have $\begin{Bmatrix}e_t\end{Bmatrix} = 0$, although this
 condition only holds at cutoff \citep{Pozar2005}.
 
@@ -381,7 +380,7 @@ the square of the complex propagation constant ($\gamma$).
 The matrices $S_{tt}$, $T_{tt}$, $S_{zz}$, and $T_{zz}$ are identical to
 those defined for the waveguide cutoff analysis of the previous section,
 with entries given by \eqref{eq:lezar:S_tt_ij}, \eqref{eq:lezar:T_tt_ij},
-\eqref{eq:lezar:S_zz_ij}, and \eqref{eq:lezar:T_zz_ij} respectively. The
+\eqref{eq:lezar:S_zz_ij}, and \eqref{eq:lezar:T_zz_ij}, respectively. The
 entries of the other submatrices, $B_{tt}$, $B_{tz}$, and $B_{zt}$,
 are defined by
 \begin{align}
@@ -449,8 +448,8 @@ V_L = FunctionSpace(mesh, "Lagrange", axial_order)
 
 combined_space = V_N * V_L
 
-(N_v, L_v) = TestFunctions(combined_space)
-(N_u, L_u) = TrialFunctions(combined_space)
+(N_i, L_i) = TestFunctions(combined_space)
+(N_j, L_j) = TrialFunctions(combined_space)
 \end{python}
 
 \begin{figure}
@@ -516,15 +515,15 @@ is considered since the same calculation is performed for a range of
 operating frequencies.
 
 \begin{python}
-s_tt = one_over_u_r*dot(curl_t(N_v), curl_t(N_u))
-t_tt = e_r*dot(N_v, N_u)
+s_tt = one_over_u_r*dot(curl_t(N_i), curl_t(N_j))
+t_tt = e_r*dot(N_i, N_j)
 
-s_zz = one_over_u_r*dot(grad(M_v), grad(M_u))
-t_zz = e_r*M_v*M_u
+s_zz = one_over_u_r*dot(grad(L_i), grad(L_j))
+t_zz = e_r*L_i*L_j
 
-b_tt = one_over_u_r*dot(N_v, N_u)
-b_tz = one_over_u_r*dot(N_v, grad(M_u))
-b_zt = one_over_u_r*dot(grad(M_v), N_u)
+b_tt = one_over_u_r*dot(N_i, N_j)
+b_tz = one_over_u_r*dot(N_i, grad(L_j))
+b_zt = one_over_u_r*dot(grad(L_i), N_j)
 
 a_tt = s_tt - k_o_squared*t_tt
 b_zz = s_zz - k_o_squared*t_zz
@@ -582,7 +581,7 @@ For dispersion curves the computed value of the propagation constant
 frequency ($f_o$). Since $\gamma$ is a complex variable, a mapping is
 required to represent the data on a single two-dimensional graph. This
 is achieved by choosing the $f_o$-axis to represent the value $\gamma
-= 0$, effectively dividing the {$\gamma-f_o$} plane into two
+= 0$, effectively dividing the {$\gamma{f_o}$}-plane into two
 regions. The region above the $f_o$-axis is used to represent the
 magnitude of the imaginary part of $\gamma$ ($|\beta|$), whereas the
 magnitude of the real part ($|\alpha|$) falls in the lower region. A
@@ -601,14 +600,14 @@ the entries in an eigenvector obtained from one of the eigenvalue
 problems. In addition, the transverse or axial components of the field
 may need to be extracted. An example for plotting the transverse and
 axial components of the field is given in the code listing below.
-Here the variable \emp{x} assigned to the function vector is one of
+Here the variable \emp{e} assigned to the function vector is one of
 the eigenvectors obtained by solving the eigenvalue
 problem. The \emp{eval} method of the \emp{transverse} and \emp{axial}
 functions can also be called in order to evaluate the functions at a
 given spatial coordinate, allowing for further visualization or
 post-processing options.
 \begin{python}
-f = Function(combined_space, x)
+f = Function(combined_space, e)
 
 (transverse, axial) = f.split()
 
@@ -648,14 +647,12 @@ are given by~\citep{Pozar2005}
     \label{eq:lezar:rect:E_y analytical}
     E_y &= -\frac{m}{a}A_{mn}\sin\left(\frac{m\pi x}{a}\right)\cos\left(\frac{n\pi y}{b}\right),
 \end{align}
-for the $TE_{mn}$ (transverse electric) modes. These modes have
-electric field components in the waveguide cross section and
+for the $TE_{mn}$ (transverse electric) modes. These modes only have
+electric field components in the plane perpendicular to the direction of propagation~\citep{Pozar2005} -- the waveguide cross section -- and
 correspond with the transverse part ($\vec{E}_t$) of the finite
 element solution. The subscripts $mn$ are used to identify the modes,
 with $m$ and $n$ non-negative integers subject to the restriction that
-at least one of them must be nonzero. These transverse electric modes
-have electric field components only in the plane perpendicular to the
-direction of propagation~\citep{Pozar2005}.
+at least one of them must be nonzero.
 
 \begin{figure}
     \centering
@@ -763,7 +760,7 @@ hollow rectangular waveguide, the mixed formulation as discussed in
 curves for the first 5 modes of the hollow rectangular guide are shown
 in Figure~\ref{fig:lezar:hollow_rectangular_dispersion_curves}
 along with the analytical results. For the rectangular
-guide a number of modes are degenerate~\cite[see][Chapter
+guide, a number of modes are degenerate~\cite[see][Chapter
 10]{Davidson2011} with the same dispersion and cutoff properties
 as predicted by \eqref{eq:lezar:rectangular_propagation} and
 \eqref{eq:lezar:rectangular_cutoff}. (As an example consider the $TE_{01}$
@@ -779,7 +776,7 @@ excellent agreement between the analytical and computed results.
   $1\text{m}\times~0.5\text{m}$ hollow rectangular waveguide of
   Figure~\ref{fig:lezar:hollow_rectangular_guide}. Markers are used to
   indicate the analytical results with $\blacksquare$ and $\blacklozenge$
-  indicating TE and TM modes respectively. Note that the analytical
+  indicating TE and TM modes, respectively. Note that the analytical
   $TE_{01}$ and $TE_{20}$ form a degenerate pair, as do the $TE_{11}$
   and $TM_{11}$ modes.}
   \index{dispersion curves}
@@ -822,8 +819,8 @@ its lower half is filled with an $\epsilon_r = 4$ dielectric material.
 
 Figure~\ref{fig:lezar:half_filled_rectangular_cutoff_TE} and
 Figure~\ref{fig:lezar:half_filled_rectangular_cutoff_TM} show the
-$TE_{10}$ and $TM_{11}$ cutoff modes of the half-loaded guide (shown in
-Figure~\ref{fig:lezar:half_filled_rectangular_guide}) respectively. Note
+first and fourth cutoff modes of the half-loaded guide (shown in
+Figure~\ref{fig:lezar:half_filled_rectangular_guide}), respectively. Note
 the concentration of the transverse electric field in the hollow part of
 the guide. This is due to the fact that the displacement flux, $\vec{D}
 = \epsilon\vec{E}$, must be normally continuous at the dielectric
@@ -845,7 +842,7 @@ surface is shown as a dashed horizontal line.}
 \centering
   \def\svgwidth{\smallfig}
     \import{chapters/lezar/svg/}{half_filled_cutoff_TM.pdf_tex}
-\caption{The forth calculated cutoff mode of a
+\caption{The fourth calculated cutoff mode of a
 $1\text{m}\times0.5\text{m}$ half-filled rectangular waveguide as shown
 in Figure~\ref{fig:lezar:half_filled_rectangular_guide}. The dielectric
 surface is shown as a dashed horizontal line.}
