--- a/tex/23.tex
+++ b/tex/23.tex
@@ -548,10 +548,19 @@ class InflowBoundaryValue(Expression):
         self.problem = problem
         self.bc_func, self.t_period = makeIC()
 
-    def eval_data(self, values, x, ufc_cell):
-        n = data.cell().normal(data.facet())
+    def eval_cell(self, values, x, ufc_cell):
+
+        # Create DOLFIN Cell
+        cell = Cell(mesh, ufc_cell.index)
+
+        # Get normal for current facet
+        assert(ufc_cell.local_facet >= 0)
+        n = cell.normal(ufc_cell.local_facet)
+
+        # Compute boundary value
         t = self.problem.t
-        val = splev(t - int(t/self.t_period)*self.t_period, self.bc_func)
+        val = splev(t - int(t/self.t_period)*self.t_period,
+                    self.bc_func)
         values[0] = -n.x()*val
         values[1] = -n.y()*val
         values[2] = -n.z()*val
